remove buy-button margin to fix alignment on home page slides

--- a/public/styles/_kali.scss
+++ b/public/styles/_kali.scss
@@ -748,7 +748,7 @@ hr {
     }
 }
 
-.fullpage-wrapper {
+.fullpage-wrapper .product-main {
     .buy-button {
         margin: 0
     }
